feat: refonte Auth + Upload images + Système messages complet
 Refonte complète Auth en Tailwind CSS:
- Login: formulaire Tailwind pur, validation visuelle, toast custom
- Register: stepper 3 étapes custom, formatage auto téléphone/code postal
- Suppression complète Material UI (MatCard, MatFormField, MatInput, etc.)

 Upload d'images réelles:
- Backend: FileUploadController avec stockage local (uploads/)
- Frontend: ImageUploadComponent avec preview et drag&drop
- Validation: max 5 images, 5MB par image, types autorisés
- Intégration dans CreateAnnonce (étape 3)
- Configuration CORS et Spring Security pour images publiques